[cr] fixed map card on mobile

--- a/public/sass/components/_map.scss
+++ b/public/sass/components/_map.scss
@@ -66,6 +66,7 @@
     width: auto;
     margin: auto;
     float: none;
+    clear: both;
   }
   hr {
     	border: solid 1px $very-light-blue;
